--- a/frontend/game.css
+++ b/frontend/game.css
@@ -42,6 +42,24 @@
   color: #4183cc;
 }
 
+.red-turn .status-mode {
+
+  background: #d13030;
+  /* padding: 35px; */
+  width: 30em;
+  text-align: center;
+  align-items: center;
+  vertical-align: middle;
+}
+.blue-turn .status-mode {
+  background: #4183cc;
+  /* padding: 35px; */
+  width: 30em;
+  text-align: center;
+  align-items: center;
+  vertical-align: middle;
+}
+
 #remaining {
   width: 10em;
 }
@@ -372,3 +390,5 @@
   color: #000;
   font-weight: bold;
 }
+
+
